# OmniHub

./: CHANGELOG.md  README.md  ROADMAP.md  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
scripts/: generate-icons.js
src/: app.css  app.js  index.html  splash.html  style.css  tauri-api.js  tauri-bundle.js  tauri-event-bundle.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: anilist.rs  discord.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  sessions.rs  splash.rs
src/js/: app.js  fixes.js  main.js  patches.js  tauri-bridge.js
src/js/core/: achievements.js  i18n.js  providers.js
src/js/features/: feedback.js  widevine.js
src/js/ui/: notifications.js  search.js
src/lib/: anilist.ts  discord.ts  embedded.ts  streamWindow.ts  version.ts
src/lib/components/: AddProviderModal.svelte  Clock.svelte  DiscordPresence.svelte  Logo.svelte  MediaBrowser.svelte  OnboardingModal.svelte  Particles.svelte  ProfileSwitcher.svelte  ProviderCard.svelte  SettingsModal.svelte  Sidebar.svelte  SleepCountdown.svelte  SleepTimer.svelte  TitleInfoModal.svelte  Toasts.svelte  UpdateBanner.svelte
src/lib/data/: brandIcons.ts
src/lib/stores/: achievements.ts  profiles.ts  providers.ts  settings.ts  toasts.ts  tracking.ts  updater.ts  watchlist.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/cr-calendar/: +page.svelte
src/routes/stats/: +page.svelte
src/routes/stream/: +page.svelte
