[package]
name        = "omnihub"
version     = "1.0.1"
description = "OmniHub – Dein zentrales Streaming-Hub"
authors     = ["Percival Aletheos"]
license     = "MIT"
repository  = "https://github.com/P3rc1v4l/OmniHub"
edition     = "2021"

[lib]
name       = "omnihub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "omnihub"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = ["image-png"] }
tauri-plugin-store        = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-http         = { version = "2", features = ["rustls-tls"] }
tauri-plugin-updater      = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener       = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio       = { version = "1", features = ["full"] }
url         = "2"
urlencoding = "2"

# Release: schneller als full-LTO, reicht für Produktion
[profile.release]
panic         = "abort"
codegen-units = 1
lto           = "thin"
opt-level     = "s"
strip         = true

# Dev-Build: schnell für lokale Tests
[profile.dev]
opt-level     = 0
debug         = false
incremental   = true

# Dependencies in Release mit höherer Optimierung (einmal gecacht, dann schnell)
[profile.release.package."*"]
opt-level = 3
